# DiabeticFreedomHelperBackend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.truenas.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-segmentation.yml  build.yml
docs/: food_scan_api_contract.md  meal_vision_data_schema.md
services/api/: .env.example  Dockerfile  README.md  pyproject.toml
services/api/src/diabetic_api/: __init__.py  main.py
services/api/src/diabetic_api/agents/: __init__.py  graph.py  llm_wrapper.py
services/api/src/diabetic_api/agents/nodes/: __init__.py
services/api/src/diabetic_api/api/: dependencies.py
services/api/src/diabetic_api/core/: __init__.py  config.py  exceptions.py  scheduler.py
services/api/src/diabetic_api/db/: __init__.py  mongo.py  unit_of_work.py
services/api/src/diabetic_api/models/: __init__.py  chat.py  food_scan.py  pump_data.py
services/api/src/diabetic_api/services/: __init__.py  carelink_api.py  confidence_engine.py  full_data.py  upload.py  usage.py
services/api/src/diabetic_api/utils/: __init__.py
services/api/tests/: __init__.py  test_health.py  test_segmentation.py
services/segmentation/: .gitignore  Dockerfile  README.md  pyproject.toml
services/segmentation/src/segmentation_api/: __init__.py  config.py  main.py  models.py  segmentation.py
services/segmentation/tests/: __init__.py  test_api.py
shared/: .gitkeep
src/diabetic_api/: main.py
src/diabetic_api/agents/: graph.py  llm.py  state.py
src/diabetic_api/agents/nodes/: __init__.py  full_data.py  query_gen.py  research.py  router.py
src/diabetic_api/agents/prompts/: query_gen.py  research.py  router.py
src/diabetic_api/api/: __init__.py  dependencies.py
src/diabetic_api/api/routes/: __init__.py  chat.py  food_scan.py  sync.py  upload.py  usage.py
src/diabetic_api/core/: config.py
src/diabetic_api/db/: unit_of_work.py
src/diabetic_api/db/repositories/: __init__.py  base.py  food_scans.py  meal_estimates.py  pump_data.py  scan_artifacts.py  sessions.py
src/diabetic_api/models/: __init__.py  dashboard.py  food_scan.py  session.py
src/diabetic_api/services/: __init__.py  carelink.py  chat.py  dashboard.py  gridfs_storage.py  upload.py  usage.py
src/diabetic_api/services/food_recognition/: base.py  ollama_provider.py
src/diabetic_api/services/nutrition_lookup/: usda_provider.py
src/diabetic_api/utils/: dates.py
tests/: conftest.py
(+24 files in other folders)
