[project]
name = "diabetic-api"
version = "1.0.0"
description = "AI-powered diabetic data API with LangGraph agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "motor>=3.6.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.12",
    "tzdata>=2024.1",
    # CareLink sync dependencies
    "selenium>=4.27.0",
    "webdriver-manager>=4.0.0",
    "undetected-chromedriver>=3.5.0",
    "setuptools>=69.0.0",  # Provides distutils for Python 3.12+
    "apscheduler>=3.10.0",
    # Food recognition dependencies
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diabetic_api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

